[package]
name = "lynxdb"
version = "2023.12.17-alpha"
edition = "2021"
description = "A rust client of LynxDB."
homepage = "https://lynxdb.bailizhang.com/"
repository = "https://github.com/LynxDB-Project/rust-lynxdb"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
